Libftest/deepthought
= Host-specific information ====================================================
$> hostname; uname -msr
e1r8p10.42.fr
Darwin 18.7.0 x86_64
$> date
Fri Jan  8 11:52:07 CET 2021
$> gcc --version
Apple clang version 11.0.0 (clang-1100.0.33.17)
Target: x86_64-apple-darwin18.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple clang version 11.0.0 (clang-1100.0.33.17)
Target: x86_64-apple-darwin18.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= libft.h=======================================================================
$> norminette libft.h | grep -E '(Error|Warning)'
Error: global scope bad aligned
Error (line 16): wrong number of spaces in preprocessor indentation
Error (line 17): wrong number of spaces in preprocessor indentation
Error (line 18): wrong number of spaces in preprocessor indentation
Error (line 19): wrong number of spaces in preprocessor indentation
Error (line 20): wrong number of spaces in preprocessor indentation
Error (line 61, col 6): bad spacing
Error (line 72): wrong number of spaces in preprocessor indentation
Norme check failed

= Compiling libft ==============================================================
$> make re
rm -rf ft_atoi.o ft_bzero.o ft_calloc.o ft_isalnum.o ft_isalpha.o ft_isascii.o ft_isdigit.o ft_isprint.o ft_memccpy.o ft_strchr.o ft_itoa.o ft_memchr.o ft_memcmp.o ft_memcpy.o ft_memmove.o ft_memset.o ft_split.o ft_strdup.o ft_strjoin.o ft_strlcat.o ft_strlcpy.o ft_putstr_fd.o ft_strrchr.o ft_strlen.o ft_strncmp.o ft_strnstr.o ft_strtrim.o ft_putnbr_fd.o ft_strmapi.o ft_substr.o ft_tolower.o ft_toupper.o ft_putchar_fd.o ft_putendl_fd.o ft_lstnew.o ft_lstadd_front.o ft_lstsize.o ft_lstlast.o ft_lstdelone.o ft_lstclear.o ft_lstiter.o ft_lstadd_back.o ft_lstmap.o
rm -rf libft.a
gcc -Wall -Wextra -Werror -I includes/ -o ft_atoi.o -c ft_atoi.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_bzero.o -c ft_bzero.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_calloc.o -c ft_calloc.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_isalnum.o -c ft_isalnum.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_isalpha.o -c ft_isalpha.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_isascii.o -c ft_isascii.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_isdigit.o -c ft_isdigit.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_isprint.o -c ft_isprint.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_memccpy.o -c ft_memccpy.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_strchr.o -c ft_strchr.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_itoa.o -c ft_itoa.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_memchr.o -c ft_memchr.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_memcmp.o -c ft_memcmp.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_memcpy.o -c ft_memcpy.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_memmove.o -c ft_memmove.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_memset.o -c ft_memset.c
gcc -Wall -Wextra -Werror -I includes/ -o ft_split.o -c ft_split.c
ft_split.c:93:21: error: more '%' conversions than data arguments [-Werror,-Wformat]
                printf("i split: %d\n");
                                 ~^
1 error generated.
make: *** [ft_split.o] Error 1
gcc -Wall -Wextra -Werror -I includes/ -o ft_split.o -c ft_split.c
ft_split.c:93:21: error: more '%' conversions than data arguments [-Werror,-Wformat]
                printf("i split: %d\n");
                                 ~^
1 error generated.
make: *** [ft_split.o] Error 1

$> ls -la libft.a
